--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +17,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "typescript": "^4.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,7 +47,6 @@
   "devDependencies": {
     "@types/node": "^20.3.0",
     "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
-    "typescript": "^5.1.3"
+    "@types/react-dom": "^18.2.4"
   }
 }
